--- a/style.css
+++ b/style.css
@@ -1,20 +1,64 @@
+@font-face {
+    font-family: Geospace;
+    src: url(./fonts/GeoplaceSC-Regular.ttf);
+}
+
 :root {
-    color: #ddd;
+  color: #ddd;
+  font-family: sans-serif;
 }
 
 body {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    background-image: url(./img/bg.png);
-    background-size: 100%;
-    background-repeat: repeat;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  background-image: url(./img/endless-clouds.png);
 }
 
 #container-left {
-    flex: 1 1 30%;
+  flex: 1 3 35%;
+  height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+#banner {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  gap:1em;
+  background-color: #1f2335b7;
+  margin: auto 0;
+  text-align: center;
+  vertical-align: middle;
+  padding: 30px;
+}
+
+#banner img {
+  height: 10em;
+  width: auto;
+}
+
+.bannertext {
+    font-family: Geospace;
+    font-weight: bold;
+    font-size: 24pt;
+}
+
+#footer {
+  text-align: center;
+  padding-bottom: 0.5em;
 }
 
 #container-right {
-    flex: 3 3 70%;
+  flex: 3 1 65%;
+  background-color: #1f2335b7;
+  height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 30px;
 }
