--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 @font-face {
-    font-family: Geospace;
-    src: url(./fonts/GeoplaceSC-Regular.ttf);
+  font-family: Geospace;
+  src: url(./fonts/GeoplaceSC-Regular.ttf);
+}
+
+@font-face {
+  font-family: Raleway;
+  src: url(./fonts/Raleway-VariableFont_wght.ttf);
 }
 
 :root {
-  color: #ddd;
-  font-family: sans-serif;
+  color: #c0caf5;
+  font-family: Raleway;
 }
 
 body {
@@ -27,7 +32,7 @@ body {
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-  gap:1em;
+  gap: 1em;
   background-color: #1f2335b7;
   margin: auto 0;
   text-align: center;
@@ -41,14 +46,16 @@ body {
 }
 
 .bannertext {
-    font-family: Geospace;
-    font-weight: bold;
-    font-size: 24pt;
+  font-family: Geospace;
+  font-weight: bold;
+  font-size: 24pt;
 }
 
 #footer {
   text-align: center;
-  padding-bottom: 0.5em;
+  padding-bottom: 0.75em;
+  font-size: 0.75em;
+  line-height: 1.25em;
 }
 
 #container-right {
@@ -61,4 +68,82 @@ body {
   align-items: center;
   align-content: center;
   gap: 30px;
+}
+
+#signup-attract {
+  font-size: 1.2em;
+  margin-bottom: 2.5em;
+}
+
+#signup-form {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: row wrap;
+  background-color: #1f2335b7;
+  box-shadow: 0px 2px 0px #191c2b, 0px -2px 0px #191c2b;
+  justify-content: space-evenly;
+  padding: 2em 4em;
+}
+
+#signup-form p {
+  flex: 2 2 100%;
+  margin-bottom: 30px;
+  font-weight: bold;
+}
+
+.form-field {
+  flex: 1 1 45%;
+  margin: auto;
+  margin-bottom: 15px;
+}
+
+.form-field input {
+  border: 1px solid #1f2335;
+  border-radius: 5px;
+  margin-top: 5px;
+}
+
+.form-field input:invalid {
+  border: none;
+  outline: 2px solid #c53b53;
+}
+
+label {
+  font-size: 0.7em;
+  font-weight: 700;
+}
+
+#signup-submit {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 2em 4em;
+}
+
+#signup-submit button {
+  margin-bottom: 1.5em;
+  background-color: #414868;
+  border: 1px solid #1f2335;
+  border-radius: 5px;
+  padding: 10px 15px;
+  color: #c0caf5;
+  font-weight: bold;
+}
+
+#signup-submit button:hover {
+  background-color: #292e42;
+}
+
+p {
+  line-height: 1.25em;
+}
+
+.highlight {
+  font-style: italic;
+  font-weight: bold;
+  color: #7dcfff;
+}
+
+a {
+  text-decoration: none;
 }
